app/scss/components/_nav.scss
.navbar {
  &__container {
    position: sticky;
    top: 0;
    width: 100%;
    background-color: white;
    border-bottom: 1px solid var(--s-color-neutral-100);
  }

  &__wrapper {
    display: flex;
    max-width: 1400px;
    padding: var(--s-space-4);
    margin: 0 auto;
    gap: var(--s-space-5);
  }

  &__logo {
    display: flex;
    align-items: center;
    justify-content: center;
    background: var(--s-color-primary-100);
    padding: var(--s-space-2);
    border-radius: 8px;

    p {
      font-size: var(--s-text-label-sm-font-size);
      font-weight: var(--s-fw-bolder);
      margin: 0;
      line-height: 1.4;
    }
  }

  form {
    display: flex;
    align-items: center;
    gap: var(--s-space-4);
  }

  &__input {
    min-width: 500px;
    border-radius: 8px;
    border: 1px solid var(--s-color-border-light);
    padding: var(--s-space-3) var(--s-space-4);
    font-size: var(--s-text-label-lg-font-size);
    font-weight: var(--s-text-body-lg-font-weight);
    line-height: var(--s-text-label-lg-line-height);

    &::placeholder {
      color: var(--s-color-neutral-500);
    }

    &:focus {
      outline: none;
      border-color: var(--s-color-neutral-300);
    }
  }
}

